Database and Model

--- a/Project1/Project1.csproj
+++ b/Project1/Project1.csproj
@@ -43,7 +43,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -67,6 +75,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\userDatabase.mdf" />
+    <Content Include="App_Data\userDatabase_log.ldf">
+      <DependentUpon>userDatabase.mdf</DependentUpon>
+    </Content>
+    <Content Include="Model\userDatabaseModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>userDatabaseModel.Context.cs</LastGenOutput>
+      <DependentUpon>userDatabaseModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Model\userDatabaseModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>userDatabaseModel.edmx</DependentUpon>
+      <LastGenOutput>userDatabaseModel.cs</LastGenOutput>
+    </Content>
     <Content Include="View\Guest\GuestLogin.aspx" />
     <Content Include="View\Guest\GuestRegister.aspx" />
     <Content Include="View\Guest\GuestViewAlbum.aspx" />
@@ -74,6 +96,39 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Album.cs">
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Artist.cs">
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Cart.cs">
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Customer.cs">
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\TransactionDetail.cs">
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\TransactionHeader.cs">
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\userDatabaseModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>userDatabaseModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\userDatabaseModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>userDatabaseModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\userDatabaseModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>userDatabaseModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Guest\GuestLogin.aspx.cs">
       <DependentUpon>GuestLogin.aspx</DependentUpon>
@@ -105,6 +160,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EntityDeploy Include="Model\userDatabaseModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>userDatabaseModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Model\userDatabaseModel.edmx.diagram">
+      <DependentUpon>userDatabaseModel.edmx</DependentUpon>
+    </Content>
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -117,10 +179,12 @@
     <Folder Include="Controller\" />
     <Folder Include="Factory\" />
     <Folder Include="Handler\" />
-    <Folder Include="Model\" />
     <Folder Include="Repository\" />
     <Folder Include="View\Admin\" />
     <Folder Include="View\Customer\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
